Fixed the overlapped step description when the text is too long.

--- a/src/main/resources/gwt/material/design/addins/public/css/stepper.css
+++ b/src/main/resources/gwt/material/design/addins/public/css/stepper.css
@@ -45,7 +45,7 @@
     padding-top: 8px;
 }
 .stepper .description {
-    line-height: 0.1;
+    line-height: 1.2;
     font-size: 1em;
     padding-bottom: 24px;
     color: #989898;
